# nexcore-integrity

./: Cargo.toml  README.md
examples/: experiment_1.rs  recalibrate.rs  recalibrate_deep.rs
src/: aggregation.rs  assessment.rs  bloom.rs  burstiness.rs  chemistry.rs  classify.rs  entropy.rs  error.rs  fixtures.rs  grounding.rs  lib.rs  perplexity.rs  profile.rs  tokenize.rs  zipf.rs
